fix notifications and add recovery endpoint